--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ nav {
 	height: 34px;
 	width: 100%;
 	text-align: center;
-	position: absolute;
+	position: relative;
 	z-index: 1000;
 	-webkit-box-shadow: 0px 0px 7px 0px #818181;
 	-moz-box-shadow: 0px 0px 7px 0px #818181;
@@ -222,7 +222,7 @@ nav a:hover {
 	text-align: left;
 }
 .gallery h2 {
-	margin-left:90px;
+	margin-left:0px;
 	font-size: 22px;
 	color: #4b4a4a;
 	text-align: left;
@@ -232,7 +232,6 @@ nav a:hover {
 .gallery tt{
 	width: 500;
 	height: 200px;	
-	
 }
 
 .gallery ui {
@@ -294,7 +293,187 @@ span.ss_text {
 	z-index: 400;
 }
 
+/*------------------------------------------------
+                      about
+--------------------------------------------------*/
 
+#about {
+	background: url(../img/about_bg.png) repeat;
+	width: 100%;
+	height: 850px;
+	position: relative;
+	z-index: 400;
+	margin-top: -13px;
+}
+
+#about .subheader {
+	margin-top: 40px;
+}
+
+.about_pic {
+	background: url(../img/about_pic.png) no-repeat;
+	width: 220px;
+	height: 260px;
+	-webkit-box-shadow: 0px 0px 0px 7px #fff;
+	-moz-box-shadow: 0px 0px 0px 7px #fff;
+	box-shadow: 0px 0px 0px 7px #fff;
+	opacity: 0.8;
+	margin-top: 67px;
+	margin-left: 50px;
+}
+
+.about_copy {
+	margin-left: 90px;
+	margin-top: 60px;
+	width: 500px;
+	
+}
+.about_copy2 {
+	width: 550px;
+	height: 200px;
+	margin-left: 0px;
+	margin-top: 60px;
+}
+.about_copy p {
+	margin-bottom: 15px;
+	color: #3d3d3d;
+}
+
+#about h4 {
+	margin-bottom: 15px;
+}
+
+/********* social **********/
+
+.social {
+	margin-top: 30px;
+}
+
+.social ul li {
+	display: inline;
+	margin-right: 10px;
+}
+
+.twitter {
+	width: 52px;
+	height: 52px;
+	background: url(../img/icn_twitter.png) no-repeat 0 0;
+	display: inline-block;
+}
+
+.facebook {
+	width: 52px;
+	height: 52px;
+	background: url(../img/icn_facebook.png) no-repeat 0 0;
+	display: inline-block;
+}
+
+.linkedin {
+	width: 50px;
+	height: 52px;
+	background: url(../img/icn_linkedin.png) no-repeat 0 0;
+	display: inline-block;
+}
+
+.dribble {
+	width: 50px;
+	height: 52px;
+	background: url(../img/icn_dribble.png) no-repeat 0 0;
+	display: inline-block;
+}
+
+.sprite:hover {
+	background-position: 0 -52px;
+}
+
+/********** skills *********/
+
+.skills {
+	margin-top: 60px;
+	margin-left: 250px;
+	width:120px
+}
+
+.skills ul li {
+	margin-bottom: 15px;
+}
+
+.skills p {
+	padding: 4px 0 0 10px;
+	color: #fff;
+	font-size: 15px;
+}
+
+.skill1 {
+	background: url(../img/skill1.png) no-repeat 0 0;
+	width: 242px;
+	height: 54px;
+}
+
+.skill2 {
+	background: url(../img/skill2.png) no-repeat 0 0;
+	width: 150px;
+	height: 27px;
+}
+
+.skill3 {
+	background: url(../img/skill3.png) no-repeat 0 0;
+	width: 150px;
+	height: 27px;
+}
+
+.skill4 {
+	background: url(../img/skill4.png) no-repeat 0 0;
+	width: 150px;
+	height: 27px;
+}
+
+.skill5 {
+	background: url(../img/skill5.png) no-repeat 0 0;
+	width: 120px;
+	height: 27px;
+}
+
+.skill6 {
+	background: url(../img/skill6.png) no-repeat 0 0;
+	width: 120px;
+	height: 27px;
+}
+
+.about_bg_bottom {
+	background: url(../img/about_bg_bottom.png) repeat-x;
+	background-color: #fff;
+	width: 100%;
+	height: 14px;
+	position: relative;
+	z-index: 500;
+}
+/*------------------------------------------------
+                    service
+--------------------------------------------------*/
+
+#service {
+	width: 100%;
+	height: 500px;
+	background-color: #fff;
+	position: relative;
+	z-index: 400;
+	text-align: center;
+}
+
+/*------------------------------------------------
+                    award
+--------------------------------------------------*/
+
+#award {
+	width: 100%;
+	height: 350px;
+	position: relative;
+	z-index: 400;
+	text-align: center;
+	background: url(../img/about_bg.png) repeat;
+	margin-top: -13px;
+}
 
 /*------------------------------------------------
                     publications
@@ -302,7 +481,7 @@ span.ss_text {
 
 #publications {
 	width: 100%;
-	height: 3400px;
+	height: 2400px;
 	background-color: #fff;
 	position: relative;
 	z-index: 400;
@@ -364,161 +543,21 @@ span.ss_text {
 }
 
 
-
 /*------------------------------------------------
-                      about
+                    project
 --------------------------------------------------*/
 
-#about {
-	background: url(../img/about_bg.png) repeat;
+#project {
 	width: 100%;
-	height: 700px;
+	height: 750px;
+	background-color: #fff;
 	position: relative;
 	z-index: 400;
+	text-align: center;
+	background: url(../img/about_bg.png) repeat;
 	margin-top: -13px;
 }
 
-#about .subheader {
-	margin-top: 40px;
-}
-
-.about_pic {
-	background: url(../img/about_pic.jpg) no-repeat;
-	width: 266px;
-	height: 266px;
-	-webkit-box-shadow: 0px 0px 0px 7px #fff;
-	-moz-box-shadow: 0px 0px 0px 7px #fff;
-	box-shadow: 0px 0px 0px 7px #fff;
-	opacity: 0.8;
-	margin-top: 67px;
-	margin-left: 60px;
-}
-
-.about_copy {
-	margin-left: 90px;
-	margin-top: 60px;
-	width: 500px;
-	
-}
-.about_copy2 {
-	width: 500px;
-	height: 200px;
-	margin-left: 60px;
-	margin-top: 60px;
-}
-.about_copy p {
-	margin-bottom: 15px;
-	color: #3d3d3d;
-}
-
-#about h4 {
-	margin-bottom: 15px;
-}
-
-/********* social **********/
-
-.social {
-	margin-top: 30px;
-}
-
-.social ul li {
-	display: inline;
-	margin-right: 10px;
-}
-
-.twitter {
-	width: 52px;
-	height: 52px;
-	background: url(../img/icn_twitter.png) no-repeat 0 0;
-	display: inline-block;
-}
-
-.facebook {
-	width: 52px;
-	height: 52px;
-	background: url(../img/icn_facebook.png) no-repeat 0 0;
-	display: inline-block;
-}
-
-.linkedin {
-	width: 50px;
-	height: 52px;
-	background: url(../img/icn_linkedin.png) no-repeat 0 0;
-	display: inline-block;
-}
-
-.dribble {
-	width: 50px;
-	height: 52px;
-	background: url(../img/icn_dribble.png) no-repeat 0 0;
-	display: inline-block;
-}
-
-.sprite:hover {
-	background-position: 0 -52px;
-}
-
-/********** skills *********/
-
-.skills {
-	margin-top: 60px;
-	margin-left: 240px;
-}
-
-.skills ul li {
-	margin-bottom: 15px;
-}
-
-.skills p {
-	padding: 4px 0 0 10px;
-	color: #fff;
-	font-size: 15px;
-}
-
-.skill1 {
-	background: url(../img/skill1.png) no-repeat 0 0;
-	width: 242px;
-	height: 54px;
-}
-
-.skill2 {
-	background: url(../img/skill2.png) no-repeat 0 0;
-	width: 200px;
-	height: 27px;
-}
-
-.skill3 {
-	background: url(../img/skill3.png) no-repeat 0 0;
-	width: 215px;
-	height: 27px;
-}
-
-.skill4 {
-	background: url(../img/skill4.png) no-repeat 0 0;
-	width: 161px;
-	height: 27px;
-}
-
-.skill5 {
-	background: url(../img/skill5.png) no-repeat 0 0;
-	width: 120px;
-	height: 27px;
-}
-
-.skill6 {
-	background: url(../img/skill6.png) no-repeat 0 0;
-	width: 120px;
-	height: 27px;
-}
-
-.about_bg_bottom {
-	background: url(../img/about_bg_bottom.png) repeat-x;
-	background-color: #fff;
-	width: 100%;
-	height: 14px;
-	position: relative;
-	z-index: 500;
-}
 
 
 /*------------------------------------------------
@@ -642,7 +681,7 @@ span.address {
 
 
 .contact_bg_bottom {
-	background: url(../img/publications_bg_bottom.png) repeat-x;
+	background: url(../img/contact_bg_bottom.png) repeat-x;
 	width: 100%;
 	height: 13px;
 	position: relative;
